--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Class-C3-XS
 
 {{$NEXT}}
+        - fix naming of test packages, now that . is no longer in @INC while
+          base.pm is running. (RT#116566, perl RT#128769)
 
 0.13    2009-09-24 00:00:00Z
         - Release 0.12_03 as a stable release, without further modifications.
