convert to Dist::Zilla

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Class-C3-XS
 
+{{$NEXT}}
+
 0.13    2009-09-24 00:00:00Z
         - Release 0.12_03 as a stable release, without further modifications.
 
