--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Class-C3-XS
 
 {{$NEXT}}
+        - minor distribution tooling updates
 
 0.14      2016-08-07 00:14:09Z
         - fix naming of test packages, now that . is no longer in @INC while
